# LogSystem

./: .gitignore  README.md  async_buffer.hpp  async_logger.hpp  async_worker.hpp  config.conf  flush.hpp  level.hpp  manage.hpp  message.hpp  thread_pool.hpp  utils.hpp  wwlog.hpp
backup/: backup_client.hpp  backup_server.hpp  server.cpp
bench/: CMakeLists.txt  bench.cpp
test/: CMakeLists.txt  test_async_buffer.cpp  test_async_logger.cpp  test_async_worker.cpp  test_flush.cpp  test_main.cpp  test_thread_pool.cpp
